# mao-ai

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot.py  trained.txt
ai/: GameLayCardSimulator.cpp  GameLayCardSimulator.h  LayCardAi.cpp  LayCardAi.h  LayCardSimulator.cpp  LayCardSimulator.h  StaticLayCardSimulator.cpp  StaticLayCardSimulator.h
ai/ActAi/: GameActSimulator.cpp  GameActSimulator.h  NeuralNetworkActAi.cpp  NeuralNetworkActAi.h  QActAI.cpp  QActAI.h  QActTrainer.cpp  QActTrainer.h
ai/ComboAi/: QComboTrainer.cpp  QComboTrainer.h
ai/MoveAi/: QMoveAi.cpp  QMoveAi.h  QMoveTrainer.cpp  QMoveTrainer.h
ai/PlayAi/: ActPredictQPlayAI.cpp  ActPredictQPlayAI.h  CombinedQPlayAI.cpp  CombinedQPlayAI.h  GameLayCardSimulator.cpp  GameLayCardSimulator.h  NeuralNetworkPlayAi.cpp  NeuralNetworkPlayAi.h  PlayAi.h  QPlayAI.cpp  QPlayAI.h  QPlayTrainer.cpp  QPlayTrainer.h  StateActPredictQPlayAI.cpp  StateActPredictQPlayAI.h  StaticLayCardSimulator.cpp  StaticLayCardSimulator.h
ai/playai/: CombinedQPlayAI.cpp  CombinedQPlayAI.h  QPlayAI.cpp  QPlayAI.h  QPlayTrainer.cpp  QPlayTrainer.h  SmartQPlayAi.cpp  SmartQPlayAi.h  StateActPredictQPlayAI.cpp
ai/q_learning/: Qmodel.h
ai/q_learning/states/: AllStatesFactory.cpp  AllStatesFactory.h  GlobalNstate.cpp  GlobalNstate.h  NCards.cpp  NCards.h
ai/util/: Ai.cpp  Ai.h  Algorithm.h  GeneticAi.cpp  GeneticAi.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GeneticSimulator.cpp  GeneticSimulator.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkAi.cpp  NeuralNetworkAi.h  NeuralNetworkSimulator.h  Simulator.h
bench/: SimpleBench.cpp  SimpleBench.h
data/: 1000_genetic_act_game.csv  50000_genetic_static.csv  5000_genetic_static.csv  500_genetic_game_forever.csv  FaultsToJson.cpp  FaultsToJson.h  discoveries.md  out_new.csv  trained_genetic_act.txt
datastructures/circlelist/: CircleList.cpp  CircleList.h
game/: CardDetail.h  Game.cpp  Game.h  ImmutableCard.cpp  ImmutableCard.h
game/act/: Action.cpp  Action.h
game/action/: Act.cpp  Act.h  Action.cpp  Action.h
game/card/: CardDetail.cpp  CardDetail.h  ImmutableCard.cpp  ImmutableCard.h
game/validation/: ActValidation.cpp  ActValidation.h  Correction.cpp  Correction.h  CorrectionStatus.h  PlayValidation.cpp  PlayValidation.h
player/: Bot.cpp  Bot.h  Player.cpp  Player.h  bot.cpp  bot.h
player/bot/: ActBot.cpp  ActBot.h  Bot.cpp  Bot.h  MoveBot.cpp  MoveBot.h  PlayBot.cpp  PlayBot.h
player/bot/neverfinish/: NeverFinishBot.cpp  NeverFinishBot.h  NeverFinishMoveBot.cpp  NeverFinishMoveBot.h
player/interfaces/: ActInterface.h  CorrectionAccepter.h  MoveInterface.h  PlayInterface.h
python/: plot.py  plotJson.py  plotTupleJson.py
util/: Color.h  EnumToVector.cpp  EnumToVector.h  GeneticAi.cpp  GeneticAi.h  GeneticAlgorithm.cpp  NeuralNetwork.cpp  util.cpp  util.h
